2009-05-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYPointerAnnotation.java
    (hashCode): Return result.

2009-05-16  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2791407 by Peter Kolb:
    * source/org/jfree/chart/renderer/category/BarRenderer.java
    (findRangeBounds): Call method in super class, not DatasetUtilities,
    * source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (findRangeBounds): Override to include dataset interval,
    * source/org/jfree/chart/renderer/category/ScatterRenderer.java
    (findRangeBounds): Override to include dataset interval,
    * source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (findRangeBounds): Override to include dataset interval,
    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateToFindRangeBounds): Handle MultiValueCategoryDataset.

2009-05-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (equals): Simplified because paintScale, guideLinePaint and guideLineStroke
    are never null.

2009-05-10  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/XYPlot.java
    (equals): Check fixedLegendItems,
    (clone): Clone fixedLegendItems,
    * tests/org/jfree/chart/plot/junit/XYPlotTests.java
    (testEquals): Added test for fixedLegendItems,
    (testCloning3): New test.

2009-05-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (doCopy): Account for insets, and pass scaling parameters to
    ChartTransferable,
    * source/org/jfree/chart/ChartTransferable.java
    (minDrawWidth): New field,
    (minDrawHeight): Likewise,
    (maxDrawWidth): Likewise,
    (maxDrawHeight): Likewise,
    (ChartTransferable): New constructor,
    (getTransferData): Delegate to new utility method,
    (createBufferedImage): New method that can apply scaling.