@@ -1,5 +1,10 @@
 2009-05-18  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
+    (drawPrimaryLine): Clip line and only draw if visible.
+
+2009-05-18  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/annotations/XYPointerAnnotation.java
     (hashCode): Return result.
 
